# ai-devops-lab

./: .gitignore  README.md
ep01-ai-aws-cli/: README.md  agent.py  executor.py  main.py  requirements.txt
ep01-devops-ai-cli/: .env.example  README.md  ai.py  pyproject.toml  requirements.txt
ep01-devops-ai-cli/examples/: deployment.yaml
