[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-ai-cli"
version = "0.1.0"
description = "AI assistant CLI for DevOps engineers"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.40.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
devops-ai = "ai:app"
